Fix content slide vertical alignment

--- a/masters.css
+++ b/masters.css
@@ -42,6 +42,7 @@ section.content {
   padding-top: 6rem;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   gap: 1.5rem;
   min-height: 100%;
 }
